# fastapi-template

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  REVIEW.md  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml
.claude/commands/: review.md
.cursor/: rules
.github/workflows/: test.yml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 00157630946a_add_suspended_at_to_user.py  068583448048_add_user_activity_table.py  1d2f7f8c1513_add_trigram_indexes_for_admin_user_.py  2fc986d6d710_drop_token_blacklist_table_moved_to_.py  59b9b58dd69e_add_tokenblacklist.py  a48b0bc6e988_add_ondelete_cascade_on_user_activity_fk.py  d9dec40f843c_initial_create_user_table.py  db36f1e8fa6b_add_deactivation_fields_to_user.py  e2bd16dc8c18_add_user_and_user_activity_tables.py
app/api/: decorators.py  deps.py  exception_handlers.py  main.py
app/api/routes/: auth.py  users.py
app/api/routes/admin/: __init__.py  activities.py  files.py  stats.py  users.py
app/core/: config.py  db.py  email.py  lifespan.py  metrics.py  middleware.py  openapi.py  rate_limit.py  redis.py  security.py  sentry.py  storage.py  telemetry.py
app/core/messages/: error_message.py  success_message.py
app/models/: __init__.py  token_blacklist.py  user.py  user_activity.py
app/repositories/: file.py  user.py  user_activity.py
app/repositories/admin/: activity.py  file.py  stats.py  user.py
app/schemas/: admin.py  file.py  msg.py  token.py  user.py  user_activity.py
app/services/: auth_service.py  file_service.py  user_activity_service.py  user_service.py
app/services/admin/: activity_service.py  file_service.py  stats_service.py  user_service.py
app/tests/: conftest.py  test_auth.py  test_deletion_worker.py  test_email.py  test_files.py  test_health.py  test_metrics.py  test_origin_restriction.py  test_rate_limit.py  test_user_activity.py  test_users.py
app/tests/admin/: conftest.py  test_activities.py  test_files.py  test_stats.py  test_users.py
app/use_cases/: log_activity.py
app/utils/: __init__.py  datetime_utils.py  email_templates.py
