[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template with layered architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "arq>=0.25.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "dnspython>=2.8.0",
    "fastapi[standard]>=0.129.2",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
    "sentry-sdk>=2.53.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.35.0",
    "greenlet>=3.3.2",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-argument
    "TID252", # relative-imports
    "ANN401", # flake8-annotations: disallow dynamically typed expressions (Any)
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults (Found in FastAPI Depends)
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for better ErrorMessages usage
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a the minimal python version supports a newer syntax.
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "strict"
reportAny = "error"
reportUnknownMemberType = "error"
reportUnknownParameterType = "error"
reportUnknownVariableType = "error"
reportUnknownArgumentType = "error"
